# fracridge

./: .codespellrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonpackage.yml
.maintenance/: update_zenodo.py
docs/: conf.py
fracridge/: _linalg.py  _numba.py  fracridge.py
