[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fracridge/version.py"
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py310"
exclude = ["docs/source/conf.py",
         "examples/",
         "setup.py"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "C",
  "W",
  "B",
  "I",
]
ignore = [
  "B905",
  "C901",
  "E203",
  "F821",
  "B021",
  "C408"
]